<resources>
    <string name="app_name">MyStoryDicodingApps</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">E-mail</string>
    <string name="registration">Registration</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="login">Login</string>
    <string name="UI_validate_empty_name_email_password">E-mail, Name , and Password must be filled</string>
    <string name="UI_validate_invalid_email">E-mail format is invalid</string>
    <string name="UI_info_failed_login_user">Login failed, E-mail or password incorrect</string>
    <string name="UI_validate_empty_email">E-mail must be filled</string>
    <string name="UI_validate_empty_password">Password must be filled</string>
    <string name="UI_validate_invalid_password">Password must be at least 8 characters</string>
    <string name="UI_info_successful_register_user">Register Success</string>
    <string name="UI_info_successful_login_user">Login Success</string>
    <string name="add">Add</string>
    <string name="logout">Logout</string>
    <string name="add_story">Add Story</string>
    <string name="UI_upload_story">Choose upload with camera or gallery</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="UI_write_story">Write your story here</string>
    <string name="UI_post_story">Post</string>
    <string name="UI_error_camera_take_a_photo">Error, Failed take a picture</string>
    <string name="UI_error_camera_is_not_loading">Failed, Camera is not loading</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="input_description">Input your description</string>
    <string name="retrofit_error">Retrofit Error</string>
    <string name="invalid_date">Invalid Date</string>
    <string name="insert_your_picture">Insert your picture first</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="detail_status">Failed tto load Detail Data</string>
    <string name="enable_location">Unable to get location. Enable your gps</string>
    <string name="share_location">Share Location ?</string>
    <string name="access_not_granted">Access is not Granted</string>
    <string name="add_string_failed">Failed to create story</string>
    <string name="retry">Retry</string>
</resources>